# stm32

./: CMakeLists.txt
Inc/: FreeRTOSConfig.h
Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
freertos/include/: FreeRTOS.h
